# stash-log-parser

./: .gitignore  .travis.yml  LogParser.hs  NOTICE  README.md  build.sh  clean.sh  generate-access-log-graphs.sh  generate-git-ops-plot.plot  generate-max-conn-plot.plot  generate-plot-data.sh  generate-support-data-graphs.sh  logparser.cabal  rebuild.sh  regenerate-graphs.sh
gnuplot/: generate-git-durations.plot  generate-git-ops-plot-caching-fetch.plot  generate-git-ops-plot-caching.plot  generate-git-ops-plot.plot  generate-git-protocol.plot  generate-git-ref-advertisement-plot.plot  generate-max-conn-plot.plot  repository-stats.plot  shared.plot
gnuplot/access-logs/: generate-git-durations.plot  generate-git-ops-plot.plot  generate-max-conn-plot.plot  repository-stats.plot
gnuplot/support-zip/: repository-stats.plot
logparser/: CHANGELOG  Makefile  NOTICE  README.md  Rakefile  logparser.cabal  rebuild.sh  stack.yaml
logparser/src/: Main.hs  MainZip.hs
logparser/src/Stash/Log/: Analyser.hs  Chart.hs  Common.hs  File.hs  GitOpsAnalyser.hs  Input.hs  Output.hs  Parser.hs  Types.hs
logparser/src/Stash/Support/: ZipFile.hs
logparser/tests/: Properties.hs
src/: Main.hs
src/Stash/Log/: Analyser.hs  Parser.hs
tests/: Properties.hs
vagrant/: Rakefile  Vagrantfile  build-logparser.sh
vagrant/salt/: minion
vagrant/salt/roots/salt/: top.sls
vagrant/salt/roots/salt/development/: init.sls
