Name:                   logparser
Version:                0.1
Synopsis:               Log parser for the Atlassian Stash access log format
Description:            My super cool, indeed, even mega lambdas 
                        will demonstrate a basic project. You will marvel.
License:                OtherLicense
License-file:           LICENSE 
Author:                 Stefan Saasen
Maintainer:             Stefan Saasen <ssaasen@atlassian.com>
Build-Type:             Simple

Executable:             logparser
Main-is:                Main.hs
Hs-source-dirs:         src

Build-Depends:
                base < 5 && >= 3,
                bytestring >= 0.9,
                old-locale,
                old-time,
                MissingH,
                attoparsec >= 0.10,
                unordered-containers >= 0.2

GHC-Options:
                -Wall
                -fno-warn-unused-do-bind
